01-Getting_Started/04-hello_world_1_service_2_deployments_managed_version_foo_namespace/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: foo
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: helloworld
