01-Getting_Started/04-hello_world_1_service_2_deployments_managed_version_foo_namespace/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  http:
    - match:
        - uri:
            exact: /helloworld
      route:
        - destination:
            host: helloworld.foo.svc.cluster.local
            port:
              number: 80
            subset: v1
          weight: 20
        - destination:
            host: helloworld.foo.svc.cluster.local
            port:
              number: 80
            subset: v2
          weight: 80
      rewrite:
        uri: "/"
